--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.52.4",
     "@stripe/stripe-js": "^4.1.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
